Fixed icons not fitting mobile

--- a/src/layout/Header.scss
+++ b/src/layout/Header.scss
@@ -42,9 +42,20 @@ header {
   }
 
   @media (max-width: 600px) {
-    flex-direction: flex;
-    gap: 18px;
-    padding: 18px;
-    transition: gap 0.3s;
+    gap: 15px;
+    padding: 14px;
+
+    a {
+      font-size: 15px;
+    }
+  }
+
+  @media (max-width: 400px) {
+    gap: 11px;
+    padding: 10px;
+
+    a {
+      font-size: 15px;
+    }
   }
 }
